Fix access to Dockerfile

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,6 @@ jobs:
         run: | 
           docker login -u $DOCKER_USER -p $DOCKER_PASS 
       - name: Build the Docker image 
-        run: docker build . --file Dockerfile --tag jguerra47/express-randomquotes:latest 
+        run: docker build . --file randomquotes/Dockerfile --tag jguerra47/express-randomquotes:latest 
       - name: Docker Push 
         run: docker push jguerra47/express-randomquotes
